add last features and docs
